fixed about breaking on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -969,13 +969,16 @@ span.fade {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-items: center;
         justify-content: space;
         height: 99vh;
         width: 100vw;
+        gap: 10px;
     }
 
     .about-container > .about-header {
-        margin-top: -14vh;
+        margin-top: 2vh;
+        margin-bottom: 2vh;
         font-size: 3.5vh;
     }
 
@@ -984,7 +987,6 @@ span.fade {
         display: flex;
         height: 1fr;
         width: auto;
-        margin-top: -14vh;
         padding: 3px;
         order: 2;
         border: 0px solid transparent;
@@ -1008,22 +1010,20 @@ span.fade {
         font-size: 3vw;
         height: auto;
         width: auto;
-        margin-top: -14vh;
         margin-left: 25px;
         margin-right: 25px;
-        order: 2;
+        order: 3;
     }
     
     
     .about-container > .about-boxes {
-        order: 3;
+        order: 4;
         display: flex;
         flex-direction: column;
-        height: 100px;
+        height: auto;
         width: 100vw;
         margin-left: 20px;
         margin-right: 20px;
-
     
     }
     
